--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,34 +8,38 @@
     android:gravity="center"
     tools:context=".MainActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="201dp"
+            android:layout_weight="1" />
+
         <TextView
             android:id="@+id/number_of_points"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="30dp"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/number_of_points2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:padding="30dp"
             android:text="TextView" />
 
     </LinearLayout>
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="81dp"
+        android:layout_weight="0." />
 
     <TextView
         android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:padding="30dp"/>
+        android:padding="30dp"
+        android:text="TextView" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,17 +51,17 @@
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_weight="1"
-            android:text="@string/button_true"
-            android:layout_margin="10dp" />
+            android:text="@string/button_true" />
 
         <Button
             android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_weight="1"
-            android:text="@string/button_false"
-            android:layout_margin="10dp"/>
+            android:text="@string/button_false" />
 
     </LinearLayout>
 
@@ -66,7 +70,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_next" />
-<!--    <Button-->
+
+
+    <!--    <Button-->
 <!--        android:layout_width=""-->
 <!--        android:layout_height=""-->
 <!--        />-->
